--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.x",
+    "express": "4.10.2",
     "socket.io": "^2.0.3"
   }
 }
